--- a/src/style.css
+++ b/src/style.css
@@ -86,3 +86,27 @@
     transform: rotate(360deg);
   }
 }
+
+.imageDiv {
+  width: 30%;
+  margin-left: 2.5%;
+  margin-top: 1em;
+  height: 32em;
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  cursor: pointer;
+}
+
+.inputImage {
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
