--- a/src/style.css
+++ b/src/style.css
@@ -116,3 +116,20 @@
 .gobtn:hover {
   opacity: 0.8;
 }
+
+.grid {
+  width: 90vw;
+  margin: 1em auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 112px);
+  grid-gap: 0.3em;
+  justify-content: space-between;
+}
+
+.frame {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
